--- a/blog/_posts/2016-05-22-worms.md
+++ b/blog/_posts/2016-05-22-worms.md
@@ -24,12 +24,12 @@ I also added a sealable spout for easy draining of the excess water, by repurpos
 {% include _image.html img="2016-05-21-wormbox-drain.jpg" caption="Inside view of tray and drain spout, with screen removed" %}
 
 
-I bought 1/4 pound of red wigglers from a very nice [http://www.windycityworms.com/](local woman) selling worms from her own composting system, but realized it would take too long for them to repopulate to fill the bin. So I re-upped with another half pound or so from a live bait shop. Hopefully the hippie organic worms will get along with the more rough-around-the-edges bait worms. 
+I bought 1/4 pound of red wigglers from a very nice [local woman](http://www.windycityworms.com/) selling worms from her own composting system, but realized it would take too long for them to repopulate to fill the bin. So I re-upped with another half pound or so from a live bait shop. Hopefully the hippie organic worms will get along with the more rough-around-the-edges bait worms. 
 
 I've been slowly ramping up feeding them scraps this week, and will be figuring out what a good steady-state amount to feed them while they grow into the container. But I think they're happy so far.
 
 {% include _image.html img="2016-05-21-wormbox-worms.jpg" caption="" %}
 
 For anyone considering setting up a vermicomposting system like this, I highly recommend
-reading [http://www.redwormcomposting.com/](Red Worm Composting). It's a great combination 
+reading [Red Worm Composting](http://www.redwormcomposting.com/). It's a great combination 
 of anecdotes and more scientific information about this style of composting.
